BUG 5143 码库全选和批量删除位置调整

--- a/weapp/mall/templates/mall/editor/promotion/coupons.html
+++ b/weapp/mall/templates/mall/editor/promotion/coupons.html
@@ -26,8 +26,8 @@
 	<div class="panel-heading xui-headStyle"  style="background:#E9EDF5; height: 61px">
 		<input type="checkbox" id="topSelectAll"  class="xa-selectAll ml10"/>
 		<label for="topSelectAll" class="xui-topSelectAll">全选</label>
-		<a href="javascript:void(0);" class="btn btn-default xa-batchDelete">批量删除</a>
-		<a href="/mall2/coupon_list/?rule_id={{ rule_id }}" class="btn btn-default ml10">导出所有</a>
+		<a href="javascript:void(0);" class="btn btn-default xa-batchDelete ml10">批量删除</a>
+		<a href="/mall2/coupon_list/?rule_id={{ rule_id }}" class="btn btn-default">导出所有</a>
 
 		{% if can_add_coupon %}
 		<a href="/mall2/coupon/?rule_id={{ rule_id }}" class="btn btn-success ml10 fr xui-btnSetting"><img src="/static_v2/img/editor/plusOpcity.png" alt="">&nbsp;&nbsp;&nbsp;&nbsp;添加库存</a>
@@ -52,8 +52,8 @@
 		<div class="panel-heading pl22">
 		<input type="checkbox" id="bottomSelectAll"  class="xa-selectAll" style="margin-left:2px;"/>
 		<label for="bottomSelectAll" class="xui-topSelectAll">全选</label>
-		<a href="javascript:void(0);" class="btn btn-default xa-batchDelete">批量删除</a>
-		<a href="/mall2/coupon_list/?rule_id={{ rule_id }}" class="btn btn-default ml10">导出所有</a>
+		<a href="javascript:void(0);" class="btn btn-default xa-batchDelete ml10">批量删除</a>
+		<a href="/mall2/coupon_list/?rule_id={{ rule_id }}" class="btn btn-default">导出所有</a>
 	</div>
 	</div>
 </div>
