--- a/weapp/apps/customerized_apps/sign/templates/editor/workbench.html
+++ b/weapp/apps/customerized_apps/sign/templates/editor/workbench.html
@@ -136,6 +136,9 @@
           line-height: 14px;
           vertical-align: text-top;
         }
+        .xui-propertyView-app-ShareGroup Button.xui-removeImageButton{
+            display: none;
+        }
 
     </style>
 {% endblock %}
