添加签到链接

--- a/weapp/static_v2/js/view/weixin_menu_link_view/template.html
+++ b/weapp/static_v2/js/view/weixin_menu_link_view/template.html
@@ -18,5 +18,6 @@
     {{if shengjing}}
     <li><a href="javascript:void(0);" class="xa-linkItemMenu" data-type="shengjingCustom">盛景定制APP</a></li>
     {{/if}}
+    <li><a href="javascript:void(0);" class="xa-linkItemMenu" data-type="sign">签到</a></li>
 </ul>
 </script>
