--- a/weapp/mall/templates/mall/editor/red_envelope_participences.html
+++ b/weapp/mall/templates/mall/editor/red_envelope_participences.html
@@ -81,7 +81,7 @@
 				<th class="tx_sortable xui-Blue" data-sort-attr='introduce_new_member' data-sort-direction="up">引入新关注</th>
 				<th class="tx_sortable xui-Blue" data-sort-attr='introduce_sales_number' data-sort-direction="up">引入消费额</th>
 				<th class="tx_sortable xui-Blue" data-sort-attr='created_at' data-init-sort="-created_at" data-sort-direction="up">领取时间</th>
-				<th class="tx_sortable xui-Blue" data-sort-attr='coupon_status' data-sort-direction="up">使用状态</th>
+				<th class="tx_sortable xui-Blue" data-sort-attr='coupon_status_id' data-sort-direction="up">使用状态</th>
 				<th>操作</th>
 			</tr>
 		</thead>
