--- a/weapp/termite/static/termite_js/app/component/appkit/signdescription/signdescription.html
+++ b/weapp/termite/static/termite_js/app/component/appkit/signdescription/signdescription.html
@@ -206,7 +206,7 @@
     </div>
 
     <div class="wui-SignDescriptionDiv">
-        <div class="wui-SignDescriptionDiv Chr wa-prize-board">今日可以领取<span class="daily_points wa-daily_points">{{component.model.daily_points}}</span>积分，“<span class="daily_prizes wa-daily_prizes">{{ component.model.daily_prizes.name }}</span>”一张</div>
+        <div class="wui-SignDescriptionDiv Chr wa-prize-board">今日可以领取<span class="daily_points wa-daily_points">{% if component.model.daily_points %}{{component.model.daily_points}}{% else %}0{% endif %}</span>积分<span class="daily_prizes wa-daily_prizes" {% if not component.model.daily_prizes.name %}style="display: none"{% endif %}>,<span class="wa-daily_prizes-i-name">{{ component.model.daily_prizes.name }}</span>一张</span></div>
     </div>
 </div>
 {% endifequal %}
