--- a/weapp/mall/templates/mall/editor/red_envelope_participences.html
+++ b/weapp/mall/templates/mall/editor/red_envelope_participences.html
@@ -37,7 +37,7 @@
 			<label for="topSelectAll" class="xui-selectAll ml15">
 				<input type="checkbox" id="topSelectAll" class="xa-selectAll">全选
 			</label>
-			<label class="fr mt5 ml10">筛选结果：{{has_data}}人</label>
+			<div class="fr mt5 ml10">筛选结果：{{has_data}}人</div>
 			<a href="javascript:void(0);" class="fr btn btn-default ml10 xa-export-all">导出结果</a>
 			<a href="javascript:void(0);" class="fr btn btn-default ml10 xa-export-selected">导出选中</a>
 			<a id="export_href" style="display: none ">DownloadXLS</a>
@@ -81,7 +81,7 @@
 				<th class="tx_sortable xui-Blue" data-sort-attr='introduce_new_member' data-sort-direction="up">引入新关注</th>
 				<th class="tx_sortable xui-Blue" data-sort-attr='introduce_sales_number' data-sort-direction="up">引入消费额</th>
 				<th class="tx_sortable xui-Blue" data-sort-attr='created_at' data-init-sort="-created_at" data-sort-direction="up">领取时间</th>
-				<th class="tx_sortable xui-Blue" data-sort-attr='coupon_status_id' data-sort-direction="up">使用状态</th>
+				<th class="tx_sortable xui-Blue" data-sort-attr='coupon_status' data-sort-direction="up">使用状态</th>
 				<th>操作</th>
 			</tr>
 		</thead>
