--- a/weapp/static_v2/js/view/weixin2_message_remark_view/template.html
+++ b/weapp/static_v2/js/view/weixin2_message_remark_view/template.html
@@ -1,6 +1,6 @@
 <script id="message_remark_info_view" type="text/x-jquery-tmpl">
 	<div class="fl" style="width:254px;margin-left:25px;margin-top:15px;">
-		<input name="message_remark" class="form-control" type="text" placeholder="最多输入300字" style="padding:2px 10px;box-sizing:initial"/>
+		<input name="message_remark" class="form-control" type="text" data-validate="require-string" placeholder="最多输入300字" maxlength="300" style="padding:2px 10px;box-sizing:initial"/>
 	</div>
 	<div class="fl" style="margin-left:60px;margin-top:6px;">
 		<button class="btn xa-submit btn-primary" style="">确定</button>
