--- a/weapp/termite/static/termite_js/app/component/appkit/signdescription/signdescription.html
+++ b/weapp/termite/static/termite_js/app/component/appkit/signdescription/signdescription.html
@@ -165,6 +165,18 @@
             transform:translate3d(0,-40px,0)
         }
     }
+    @-webkit-keyframes fadeOutUpBig{
+        0%{
+            opacity:1;
+            -webkit-transform:translate3d(0,0,0);
+            transform:translate3d(0,0,0)
+        }
+        100%{
+            opacity:0;
+            -webkit-transform:translate3d(0,-40px,0);
+            transform:translate3d(0,-40px,0)
+        }
+    }
     .fadeOutUpBig{
         -webkit-animation-name:fadeOutUpBig;
         animation-name:fadeOutUpBig;
