--- a/weapp/termite/static/termite_js/app/component/appkit/signdescription/signdescription.html
+++ b/weapp/termite/static/termite_js/app/component/appkit/signdescription/signdescription.html
@@ -161,6 +161,7 @@
         }
         100%{
             opacity:0;
+            display: none;
             -webkit-transform:translate3d(0,-40px,0);
             transform:translate3d(0,-40px,0)
         }
