fix：签到：查看规则，获取签到积分信息

--- a/weapp/apps/customerized_apps/sign/templates/webapp/m_sign.html
+++ b/weapp/apps/customerized_apps/sign/templates/webapp/m_sign.html
@@ -165,12 +165,7 @@
         </div>
         <div class="wui-rules-rules-div">
             <p class="wui-rules-i-title">活动规则</p>
-            <ol class="wui-rules-i-content">
-                <li>1.每日签到获得20积分</li>
-                <li>1.每日签到获得20积分</li>
-                <li>1.每日签到获得20积分</li>
-                <li>1.每日签到获得20积分</li>
-            </ol>
+            <ol class="wui-rules-i-content wa-rules-i-content"></ol>
         </div>
         <div class="wui-rules-footer-div">
             <div class="wui-rules-i-desc">备注:签到奖励可以到<a class="wui-rules-i-center wa-rules-i-center">个人中心</a>查看</div>
@@ -183,9 +178,7 @@
 <script type="text/javascript">
 	W.pageId = "{{request.GET.page_id}}";
     var member_info = JSON.parse('{{ member_info|safe }}');
-    console.log(member_info);
     var prize_info = JSON.parse('{{ prize_info|safe}}');
-    console.log(prize_info);
     var status = "{{ activity_status }}";
     var resultDialog;
 
@@ -297,6 +290,26 @@
             $('.wa-signPageDiv').hide();
             $('.wa-rules-div').show();
         });
+        //积分数据
+        $all_integral = prize_info.serial_integral;
+        $int_arr =[];
+        $int_html="";
+        for(var each in $all_integral){
+          $int_arr.push(each);
+        }
+        $int_arr = $int_arr.sort();
+        for(var i=0;i<$int_arr.length;i++){
+            var j=i+1;
+            var day_num = $int_arr[i];
+            var points = $all_integral[$int_arr[i]];
+            if(day_num=='0'){
+                $int_html += "<li>1.每日签到,获得"+points+"积分奖励</li>";
+            }else{
+                $int_html += "<li>"+j+".连续签到至"+day_num+"天,获得"+points+"积分奖励</li>";
+            }
+        }
+        $('.wa-rules-div').find('.wa-rules-i-content').html($int_html);
+
         //返回
         $('.wui-rules-footer-div').find('.wa-btn-back').on('click', function() {
             $('.wa-rules-div').hide();
