--- a/weapp/apps/customerized_apps/sign/templates/webapp/m_sign.html
+++ b/weapp/apps/customerized_apps/sign/templates/webapp/m_sign.html
@@ -113,7 +113,7 @@
         margin-top: 35px;
     }
     .wui-rules-i-desc{
-        font-style: bold;
+        font-weight: bold;
     }
     .wui-rules-footer-div .wui-rules-i-center{
         color:red;
@@ -131,7 +131,7 @@
         border:0;
         border-radius: 3px;
         font-size: 1.2em;
-        font-style: bold;
+        font-weight: bold;
     }
 </style>
 {% endblock %}
