签到：规则详情css

--- a/weapp/apps/customerized_apps/sign/templates/webapp/m_sign.html
+++ b/weapp/apps/customerized_apps/sign/templates/webapp/m_sign.html
@@ -94,7 +94,7 @@
         color:#6D6D6D;
     }
     .wui-rules-intro-div,.wui-rules-rules-div{
-        margin-top: 10px;
+        margin-top: 10%;
     }
     .wui-rules-i-title{
         font-size: 1.2em;
@@ -110,7 +110,7 @@
         margin-left: auto;
         margin-right: auto;
         text-align: center;
-        margin-top: 35px;
+        padding-top: 40%;
     }
     .wui-rules-i-desc{
         font-weight: bold;
