签到：查看规则 字体距离

--- a/weapp/apps/customerized_apps/sign/templates/webapp/m_sign.html
+++ b/weapp/apps/customerized_apps/sign/templates/webapp/m_sign.html
@@ -96,6 +96,10 @@
     .wui-rules-intro-div,.wui-rules-rules-div{
         margin-top: 10%;
     }
+    .wui-rules-i-content,.wui-rules-rules-div ol{
+        margin-top: 10px;
+        line-height: 1.5em;
+    }
     .wui-rules-i-title{
         font-size: 1.2em;
         font-weight: bold;
