--- a/weapp/mall/templates/mall/editor/red_envelope_participences.html
+++ b/weapp/mall/templates/mall/editor/red_envelope_participences.html
@@ -103,7 +103,7 @@
                     ${item.bing_members_count}
 				</td>
 				<td>
-
+                    ${item.use_coupon_count}
 				</td>
 				<td>
 
