--- a/weapp/termite/static/termite_js/app/component/appkit/signdescription/signdescription.html
+++ b/weapp/termite/static/termite_js/app/component/appkit/signdescription/signdescription.html
@@ -141,6 +141,10 @@
             color:#626262;
             font-size: 0.9em;
         }
+        .wui-integral-adder{
+            position: absolute;
+            font-size: 20px;
+        }
         /* 翻页动画 */
         .animate3d{
             height: 220px;
