--- a/weapp/apps/customerized_apps/red_envelope/templates/editor/red_envelope_participances.html
+++ b/weapp/apps/customerized_apps/red_envelope/templates/editor/red_envelope_participances.html
@@ -103,7 +103,7 @@
                     ${item.bing_members_count}
 				</td>
 				<td>
-
+                    ${item.use_coupon_count}
 				</td>
 				<td>
 
