签到：前段css添加一些自适应

--- a/weapp/termite/static/termite_js/app/component/appkit/signdescription/signdescription.html
+++ b/weapp/termite/static/termite_js/app/component/appkit/signdescription/signdescription.html
@@ -79,7 +79,7 @@
             margin-right: -13px;
         }
         .wui-BodyPaneDiv{
-            padding-top: 15px;
+            padding-top: 10%;
         }
 
         .wui-SignCircle {
@@ -119,6 +119,7 @@
         .wui-SignDescriptionDiv {
             color: #555555;
             text-align: center;
+            margin-top: 10%;
         }
         .wui-SignCircle.wa-sign-board{
             background-color: #F0F0F0;
@@ -157,7 +158,7 @@
         }
         /* 翻页动画 */
         .animate3d{
-            height: 220px;
+            height: 160px;
             width: 160px;
             margin: 0 auto;
             perspective: 100px;
