签到：前端：自适应updated css

--- a/weapp/termite/static/termite_js/app/component/appkit/signdescription/signdescription.html
+++ b/weapp/termite/static/termite_js/app/component/appkit/signdescription/signdescription.html
@@ -16,7 +16,7 @@
         }
 
         .wui-TopPaneDiv {
-            height: auto;
+            height: 33%;
             background-image: url('/termite_static/img/component/sign/signdescription_left_bg.png');
             background-repeat: repeat-x;
             background-size: 5% auto;
@@ -79,7 +79,8 @@
             margin-right: -13px;
         }
         .wui-BodyPaneDiv{
-            padding-top: 10%;
+            margin-top: 10%;
+            margin-bottom: 10%;
         }
 
         .wui-SignCircle {
@@ -119,7 +120,9 @@
         .wui-SignDescriptionDiv {
             color: #555555;
             text-align: center;
-            margin-top: 10%;
+            height:10%;
+            margin-top: 15%;
+            margin-bottom: 15%;
         }
         .wui-SignCircle.wa-sign-board{
             background-color: #F0F0F0;
